kubernetes/config1/volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-pv-pod
spec:
  # Here we describe pod volumes which may be used by multiple containers
  volumes:
    - name: pod-db-volume # Local pod namespace declaration
      persistentVolumeClaim:
        claimName: db-pvc # The name of the persistent volume claim
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server" # Why does this port need a name?
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: pod-db-volume # Reference this volume name defined by the containing pod
