kubernetes/config1/clickhouse.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse-svc
spec:
  ports:
    - name: clickhouse-client
      port: 8123
  selector:
    app: clickhouse
  

---
apiVersion: v1
kind: Pod
metadata:
  name: clickhouse-1
  labels:
    app: clickhouse
spec:

  volumes:
    - name: clickhouse-data-v
      persistentVolumeClaim:
        claimName: clickhouse-data-pvc
    - name: clickhouse-server-v
      persistentVolumeClaim:
        claimName: clickhouse-server-pvc
  containers:
    - name: clickhouse
      image: clickhouse:lts-jammy
      volumeMounts:
        - name: clickhouse-data-v
          mountPath: "/var/lib/clickhouse"
        - name: clickhouse-server-v
          mountPath: "/var/lib/clickhouse-server"
      ports:
        - name: clickhouse-client
          containerPort: 8123
