kubernetes/config1/clickhouse-gateway.yaml
# Instead of defining a GatewayClass, we just import an nginx
# wrapper implementation of the api someone made
#
# Install the implementation with 
# kubectl kustomize "https://github.com/nginx/nginx-gateway-fabric/config/crd/gateway-api/standard?ref=v1.6.2" | kubectl apply -f -
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: clickhouse-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clickhouse-httproute
spec:
  parentRefs: # This route is used by the clickhouse-gateway gateway
  - name: clickhouse-gateway
  hostnames:
  - "www.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /login
    backendRefs:
    - name: clickhouse-client
      port: 8123
